--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -16,7 +16,7 @@ p.service-text {
 }
 
 .text-pink{
-  color: rgb(214 57 129) !important;
+  color:#9c2356 !important;
 }
 .bg-pink{
   background-color: #9c2356;
